// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaDelegate can generate fixture ALL_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/AllPropManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class AllPropManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & AllPropManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public AllPropManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"stringPropNoDefault\\":
        mViewManager.setStringPropNoDefault(view, value == null ? null : (String) value);
        break;
      case \\"booleanPropNoDefault\\":
        mViewManager.setBooleanPropNoDefault(view, value == null ? null : (Boolean) value);
        break;
      case \\"floatPropNoDefault\\":
        mViewManager.setFloatPropNoDefault(view, value == null ? null : ((Double) value).floatValue());
        break;
      case \\"stringProp\\":
        mViewManager.setStringProp(view, value == null ? \\"\\" : (String) value);
        break;
      case \\"booleanProp\\":
        mViewManager.setBooleanProp(view, value == null ? false : (boolean) value);
        break;
      case \\"floatProp\\":
        mViewManager.setFloatProp(view, value == null ? 0f : ((Double) value).floatValue());
        break;
      case \\"intProp\\":
        mViewManager.setIntProp(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"stringUserDefaultProp\\":
        mViewManager.setStringUserDefaultProp(view, value == null ? \\"user_default\\" : (String) value);
        break;
      case \\"booleanUserDefaultProp\\":
        mViewManager.setBooleanUserDefaultProp(view, value == null ? true : (boolean) value);
        break;
      case \\"floatUserDefaultProp\\":
        mViewManager.setFloatUserDefaultProp(view, value == null ? 3.14f : ((Double) value).floatValue());
        break;
      case \\"intUserDefaultProp\\":
        mViewManager.setIntUserDefaultProp(view, value == null ? 9999 : ((Double) value).intValue());
        break;
      case \\"stringEnumProp\\":
        mViewManager.setStringEnumProp(view, (String) value);
        break;
      case \\"intEnumProp\\":
        mViewManager.setIntEnumProp(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"objectArrayProp\\":
        mViewManager.setObjectArrayProp(view, (ReadableMap) value);
        break;
      case \\"objectPrimitiveRequiredProp\\":
        mViewManager.setObjectPrimitiveRequiredProp(view, (ReadableMap) value);
        break;
      case \\"nestedPropA\\":
        mViewManager.setNestedPropA(view, (ReadableMap) value);
        break;
      case \\"nestedArrayAsProperty\\":
        mViewManager.setNestedArrayAsProperty(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ALL_PROP_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/AllPropWithOptionalGenManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class AllPropWithOptionalGenManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & AllPropWithOptionalGenManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public AllPropWithOptionalGenManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"stringPropNoDefault\\":
        mViewManager.setStringPropNoDefault(view, value == null ? null : (String) value);
        break;
      case \\"booleanPropNoDefault\\":
        mViewManager.setBooleanPropNoDefault(view, value == null ? null : (Boolean) value);
        break;
      case \\"floatPropNoDefault\\":
        mViewManager.setFloatPropNoDefault(view, value == null ? null : ((Double) value).floatValue());
        break;
      case \\"stringProp\\":
        mViewManager.setStringProp(view, value == null ? \\"\\" : (String) value);
        break;
      case \\"booleanProp\\":
        mViewManager.setBooleanProp(view, value == null ? false : (boolean) value);
        break;
      case \\"floatProp\\":
        mViewManager.setFloatProp(view, value == null ? 0f : ((Double) value).floatValue());
        break;
      case \\"intProp\\":
        mViewManager.setIntProp(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"stringUserDefaultProp\\":
        mViewManager.setStringUserDefaultProp(view, value == null ? \\"user_default\\" : (String) value);
        break;
      case \\"booleanUserDefaultProp\\":
        mViewManager.setBooleanUserDefaultProp(view, value == null ? true : (boolean) value);
        break;
      case \\"floatUserDefaultProp\\":
        mViewManager.setFloatUserDefaultProp(view, value == null ? 3.14f : ((Double) value).floatValue());
        break;
      case \\"intUserDefaultProp\\":
        mViewManager.setIntUserDefaultProp(view, value == null ? 9999 : ((Double) value).intValue());
        break;
      case \\"stringEnumProp\\":
        mViewManager.setStringEnumProp(view, (String) value);
        break;
      case \\"intEnumProp\\":
        mViewManager.setIntEnumProp(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"objectArrayProp\\":
        mViewManager.setObjectArrayProp(view, (ReadableMap) value);
        break;
      case \\"objectPrimitiveRequiredProp\\":
        mViewManager.setObjectPrimitiveRequiredProp(view, (ReadableMap) value);
        break;
      case \\"nestedPropA\\":
        mViewManager.setNestedPropA(view, (ReadableMap) value);
        break;
      case \\"nestedArrayAsProperty\\":
        mViewManager.setNestedArrayAsProperty(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ALL_PROP_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/AllPropWithOptionalObjectGenManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class AllPropWithOptionalObjectGenManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & AllPropWithOptionalObjectGenManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public AllPropWithOptionalObjectGenManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"stringPropNoDefault\\":
        mViewManager.setStringPropNoDefault(view, value == null ? null : (String) value);
        break;
      case \\"booleanPropNoDefault\\":
        mViewManager.setBooleanPropNoDefault(view, value == null ? null : (Boolean) value);
        break;
      case \\"floatPropNoDefault\\":
        mViewManager.setFloatPropNoDefault(view, value == null ? null : ((Double) value).floatValue());
        break;
      case \\"stringProp\\":
        mViewManager.setStringProp(view, value == null ? \\"\\" : (String) value);
        break;
      case \\"booleanProp\\":
        mViewManager.setBooleanProp(view, value == null ? false : (boolean) value);
        break;
      case \\"floatProp\\":
        mViewManager.setFloatProp(view, value == null ? 0f : ((Double) value).floatValue());
        break;
      case \\"intProp\\":
        mViewManager.setIntProp(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"stringUserDefaultProp\\":
        mViewManager.setStringUserDefaultProp(view, value == null ? \\"user_default\\" : (String) value);
        break;
      case \\"booleanUserDefaultProp\\":
        mViewManager.setBooleanUserDefaultProp(view, value == null ? true : (boolean) value);
        break;
      case \\"floatUserDefaultProp\\":
        mViewManager.setFloatUserDefaultProp(view, value == null ? 3.14f : ((Double) value).floatValue());
        break;
      case \\"intUserDefaultProp\\":
        mViewManager.setIntUserDefaultProp(view, value == null ? 9999 : ((Double) value).intValue());
        break;
      case \\"stringEnumProp\\":
        mViewManager.setStringEnumProp(view, (String) value);
        break;
      case \\"intEnumProp\\":
        mViewManager.setIntEnumProp(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"objectArrayProp\\":
        mViewManager.setObjectArrayProp(view, (ReadableMap) value);
        break;
      case \\"objectPrimitiveRequiredProp\\":
        mViewManager.setObjectPrimitiveRequiredProp(view, (ReadableMap) value);
        break;
      case \\"nestedPropA\\":
        mViewManager.setNestedPropA(view, (ReadableMap) value);
        break;
      case \\"nestedArrayAsProperty\\":
        mViewManager.setNestedArrayAsProperty(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ARRAY_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ArrayPropsNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ArrayPropsNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ArrayPropsNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"names\\":
        mViewManager.setNames(view, (ReadableArray) value);
        break;
      case \\"disableds\\":
        mViewManager.setDisableds(view, (ReadableArray) value);
        break;
      case \\"progress\\":
        mViewManager.setProgress(view, (ReadableArray) value);
        break;
      case \\"radii\\":
        mViewManager.setRadii(view, (ReadableArray) value);
        break;
      case \\"colors\\":
        mViewManager.setColors(view, (ReadableArray) value);
        break;
      case \\"srcs\\":
        mViewManager.setSrcs(view, (ReadableArray) value);
        break;
      case \\"points\\":
        mViewManager.setPoints(view, (ReadableArray) value);
        break;
      case \\"dimensions\\":
        mViewManager.setDimensions(view, (ReadableArray) value);
        break;
      case \\"sizes\\":
        mViewManager.setSizes(view, (ReadableArray) value);
        break;
      case \\"object\\":
        mViewManager.setObject(view, (ReadableArray) value);
        break;
      case \\"array\\":
        mViewManager.setArray(view, (ReadableArray) value);
        break;
      case \\"arrayOfArrayOfObject\\":
        mViewManager.setArrayOfArrayOfObject(view, (ReadableArray) value);
        break;
      case \\"arrayOfMixed\\":
        mViewManager.setArrayOfMixed(view, (ReadableArray) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ArrayPropsNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ArrayPropsNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ArrayPropsNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"nativePrimitives\\":
        mViewManager.setNativePrimitives(view, (ReadableArray) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsOptionalGenNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ArrayPropsOptionalGenNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ArrayPropsOptionalGenNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ArrayPropsOptionalGenNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"nativePrimitives\\":
        mViewManager.setNativePrimitives(view, (ReadableArray) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsOptionalObjectGenNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ArrayPropsOptionalObjectGenNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ArrayPropsOptionalObjectGenNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ArrayPropsOptionalObjectGenNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"nativePrimitives\\":
        mViewManager.setNativePrimitives(view, (ReadableArray) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ARRAY_PROPS_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsWithOptionalGenNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ArrayPropsWithOptionalGenNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ArrayPropsWithOptionalGenNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ArrayPropsWithOptionalGenNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"names\\":
        mViewManager.setNames(view, (ReadableArray) value);
        break;
      case \\"disableds\\":
        mViewManager.setDisableds(view, (ReadableArray) value);
        break;
      case \\"progress\\":
        mViewManager.setProgress(view, (ReadableArray) value);
        break;
      case \\"radii\\":
        mViewManager.setRadii(view, (ReadableArray) value);
        break;
      case \\"colors\\":
        mViewManager.setColors(view, (ReadableArray) value);
        break;
      case \\"srcs\\":
        mViewManager.setSrcs(view, (ReadableArray) value);
        break;
      case \\"points\\":
        mViewManager.setPoints(view, (ReadableArray) value);
        break;
      case \\"dimensions\\":
        mViewManager.setDimensions(view, (ReadableArray) value);
        break;
      case \\"sizes\\":
        mViewManager.setSizes(view, (ReadableArray) value);
        break;
      case \\"object\\":
        mViewManager.setObject(view, (ReadableArray) value);
        break;
      case \\"array\\":
        mViewManager.setArray(view, (ReadableArray) value);
        break;
      case \\"arrayOfArrayOfObject\\":
        mViewManager.setArrayOfArrayOfObject(view, (ReadableArray) value);
        break;
      case \\"arrayOfMixed\\":
        mViewManager.setArrayOfMixed(view, (ReadableArray) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture ARRAY_PROPS_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ArrayPropsWithOptionalObjectGenNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ArrayPropsWithOptionalObjectGenNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ArrayPropsWithOptionalObjectGenNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ArrayPropsWithOptionalObjectGenNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"names\\":
        mViewManager.setNames(view, (ReadableArray) value);
        break;
      case \\"disableds\\":
        mViewManager.setDisableds(view, (ReadableArray) value);
        break;
      case \\"progress\\":
        mViewManager.setProgress(view, (ReadableArray) value);
        break;
      case \\"radii\\":
        mViewManager.setRadii(view, (ReadableArray) value);
        break;
      case \\"colors\\":
        mViewManager.setColors(view, (ReadableArray) value);
        break;
      case \\"srcs\\":
        mViewManager.setSrcs(view, (ReadableArray) value);
        break;
      case \\"points\\":
        mViewManager.setPoints(view, (ReadableArray) value);
        break;
      case \\"dimensions\\":
        mViewManager.setDimensions(view, (ReadableArray) value);
        break;
      case \\"sizes\\":
        mViewManager.setSizes(view, (ReadableArray) value);
        break;
      case \\"object\\":
        mViewManager.setObject(view, (ReadableArray) value);
        break;
      case \\"array\\":
        mViewManager.setArray(view, (ReadableArray) value);
        break;
      case \\"arrayOfArrayOfObject\\":
        mViewManager.setArrayOfArrayOfObject(view, (ReadableArray) value);
        break;
      case \\"arrayOfMixed\\":
        mViewManager.setArrayOfMixed(view, (ReadableArray) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/BooleanPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class BooleanPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & BooleanPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public BooleanPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? false : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture COLOR_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ColorPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ColorPropConverter;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ColorPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ColorPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ColorPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"tintColor\\":
        mViewManager.setTintColor(view, ColorPropConverter.getColor(value, view.getContext()));
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture COMMANDS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/CommandNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class CommandNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & CommandNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public CommandNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    super.setProperty(view, propName, value);
  }

  @Override
  public void receiveCommand(T view, String commandName, ReadableArray args) {
    switch (commandName) {
      case \\"flashScrollIndicators\\":
        mViewManager.flashScrollIndicators(view);
        break;
      case \\"allTypes\\":
        mViewManager.allTypes(view, args.getInt(0), (float) args.getDouble(1), args.getDouble(2), args.getString(3), args.getBoolean(4), args.getArray(5));
        break;
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/CommandNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableArray;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class CommandNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & CommandNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public CommandNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"accessibilityHint\\":
        mViewManager.setAccessibilityHint(view, value == null ? \\"\\" : (String) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }

  @Override
  public void receiveCommand(T view, String commandName, ReadableArray args) {
    switch (commandName) {
      case \\"handleRootTag\\":
        mViewManager.handleRootTag(view, args.getDouble(0));
        break;
      case \\"hotspotUpdate\\":
        mViewManager.hotspotUpdate(view, args.getInt(0), args.getInt(1));
        break;
      case \\"addItems\\":
        mViewManager.addItems(view, args.getArray(0));
        break;
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture DIMENSION_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/DimensionPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.DimensionPropConverter;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class DimensionPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & DimensionPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public DimensionPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"marginBack\\":
        mViewManager.setMarginBack(view, DimensionPropConverter.getDimension(value));
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/DoublePropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class DoublePropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & DoublePropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public DoublePropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"blurRadius\\":
        mViewManager.setBlurRadius(view, value == null ? Double.NaN : ((Double) value).doubleValue());
        break;
      case \\"blurRadius2\\":
        mViewManager.setBlurRadius2(view, value == null ? 0.001f : ((Double) value).doubleValue());
        break;
      case \\"blurRadius3\\":
        mViewManager.setBlurRadius3(view, value == null ? 2.1f : ((Double) value).doubleValue());
        break;
      case \\"blurRadius4\\":
        mViewManager.setBlurRadius4(view, value == null ? 0f : ((Double) value).doubleValue());
        break;
      case \\"blurRadius5\\":
        mViewManager.setBlurRadius5(view, value == null ? 1f : ((Double) value).doubleValue());
        break;
      case \\"blurRadius6\\":
        mViewManager.setBlurRadius6(view, value == null ? 0f : ((Double) value).doubleValue());
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/EventsNestedObjectNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class EventsNestedObjectNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & EventsNestedObjectNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public EventsNestedObjectNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? false : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture EVENT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/EventsNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class EventsNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & EventsNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public EventsNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? false : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/InterfaceOnlyComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class InterfaceOnlyComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & InterfaceOnlyComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public InterfaceOnlyComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    super.setProperty(view, propName, value);
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture EXCLUDE_ANDROID 1`] = `Map {}`;

exports[`GeneratePropsJavaDelegate can generate fixture EXCLUDE_ANDROID_IOS 1`] = `Map {}`;

exports[`GeneratePropsJavaDelegate can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ExcludedIosComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ExcludedIosComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ExcludedIosComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ExcludedIosComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    super.setProperty(view, propName, value);
  }
}
",
  "java/com/facebook/react/viewmanagers/MultiFileIncludedNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class MultiFileIncludedNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & MultiFileIncludedNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public MultiFileIncludedNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? true : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture FLOAT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/FloatPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class FloatPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & FloatPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public FloatPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"blurRadius\\":
        mViewManager.setBlurRadius(view, value == null ? Float.NaN : ((Double) value).floatValue());
        break;
      case \\"blurRadius2\\":
        mViewManager.setBlurRadius2(view, value == null ? 0.001f : ((Double) value).floatValue());
        break;
      case \\"blurRadius3\\":
        mViewManager.setBlurRadius3(view, value == null ? 2.1f : ((Double) value).floatValue());
        break;
      case \\"blurRadius4\\":
        mViewManager.setBlurRadius4(view, value == null ? 0f : ((Double) value).floatValue());
        break;
      case \\"blurRadius5\\":
        mViewManager.setBlurRadius5(view, value == null ? 1f : ((Double) value).floatValue());
        break;
      case \\"blurRadius6\\":
        mViewManager.setBlurRadius6(view, value == null ? 0f : ((Double) value).floatValue());
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture IMAGE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ImagePropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ImagePropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ImagePropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ImagePropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"thumbImage\\":
        mViewManager.setThumbImage(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture INSETS_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/InsetsPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class InsetsPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & InsetsPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public InsetsPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"contentInset\\":
        mViewManager.setContentInset(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Int32EnumPropsNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class Int32EnumPropsNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & Int32EnumPropsNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public Int32EnumPropsNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"maxInterval\\":
        mViewManager.setMaxInterval(view, value == null ? 0 : ((Double) value).intValue());
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture INTEGER_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/IntegerPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class IntegerPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & IntegerPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public IntegerPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"progress1\\":
        mViewManager.setProgress1(view, value == null ? 0 : ((Double) value).intValue());
        break;
      case \\"progress2\\":
        mViewManager.setProgress2(view, value == null ? -1 : ((Double) value).intValue());
        break;
      case \\"progress3\\":
        mViewManager.setProgress3(view, value == null ? 10 : ((Double) value).intValue());
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/InterfaceOnlyComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class InterfaceOnlyComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & InterfaceOnlyComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public InterfaceOnlyComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"accessibilityHint\\":
        mViewManager.setAccessibilityHint(view, value == null ? \\"\\" : (String) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture MIXED_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MixedPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.DynamicFromObject;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class MixedPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & MixedPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public MixedPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"mixedProp\\":
        mViewManager.setMixedProp(view, new DynamicFromObject(value));
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ImageColorPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ColorPropConverter;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ImageColorPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ImageColorPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ImageColorPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"thumbImage\\":
        mViewManager.setThumbImage(view, (ReadableMap) value);
        break;
      case \\"color\\":
        mViewManager.setColor(view, ColorPropConverter.getColor(value, view.getContext()));
        break;
      case \\"thumbTintColor\\":
        mViewManager.setThumbTintColor(view, ColorPropConverter.getColor(value, view.getContext()));
        break;
      case \\"point\\":
        mViewManager.setPoint(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/NoPropsNoEventsComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class NoPropsNoEventsComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & NoPropsNoEventsComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public NoPropsNoEventsComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    super.setProperty(view, propName, value);
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ObjectPropsManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ObjectPropsManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ObjectPropsManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"objectProp\\":
        mViewManager.setObjectProp(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture OBJECT_PROPS_WITH_OPTIONAL_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsWithOptionalGenManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ObjectPropsWithOptionalGenManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ObjectPropsWithOptionalGenManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ObjectPropsWithOptionalGenManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"objectProp\\":
        mViewManager.setObjectProp(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture OBJECT_PROPS_WITH_OPTIONAL_OBJECT_GEN 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsWithOptionalObjectGenManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class ObjectPropsWithOptionalObjectGenManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & ObjectPropsWithOptionalObjectGenManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public ObjectPropsWithOptionalObjectGenManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"objectProp\\":
        mViewManager.setObjectProp(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture POINT_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/PointPropNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.bridge.ReadableMap;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class PointPropNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & PointPropNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public PointPropNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"startPoint\\":
        mViewManager.setStartPoint(view, (ReadableMap) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/StringEnumPropsNativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class StringEnumPropsNativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & StringEnumPropsNativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public StringEnumPropsNativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"alignment\\":
        mViewManager.setAlignment(view, (String) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture STRING_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/StringPropComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class StringPropComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & StringPropComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public StringPropComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"accessibilityHint\\":
        mViewManager.setAccessibilityHint(view, value == null ? \\"\\" : (String) value);
        break;
      case \\"accessibilityRole\\":
        mViewManager.setAccessibilityRole(view, value == null ? null : (String) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MultiFile1NativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class MultiFile1NativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & MultiFile1NativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public MultiFile1NativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? false : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
  "java/com/facebook/react/viewmanagers/MultiFile2NativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class MultiFile2NativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & MultiFile2NativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public MultiFile2NativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? true : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;

exports[`GeneratePropsJavaDelegate can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MultiComponent1NativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class MultiComponent1NativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & MultiComponent1NativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public MultiComponent1NativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? false : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
  "java/com/facebook/react/viewmanagers/MultiComponent2NativeComponentManagerDelegate.java" => "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GeneratePropsJavaDelegate.js
*/

package com.facebook.react.viewmanagers;

import android.view.View;
import androidx.annotation.Nullable;
import com.facebook.react.uimanager.BaseViewManager;
import com.facebook.react.uimanager.BaseViewManagerDelegate;
import com.facebook.react.uimanager.LayoutShadowNode;

@SuppressWarnings(\\"deprecation\\")
public class MultiComponent2NativeComponentManagerDelegate<T extends View, U extends BaseViewManager<T, ? extends LayoutShadowNode> & MultiComponent2NativeComponentManagerInterface<T>> extends BaseViewManagerDelegate<T, U> {
  public MultiComponent2NativeComponentManagerDelegate(U viewManager) {
    super(viewManager);
  }
  @Override
  public void setProperty(T view, String propName, @Nullable Object value) {
    switch (propName) {
      case \\"disabled\\":
        mViewManager.setDisabled(view, value == null ? true : (boolean) value);
        break;
      default:
        super.setProperty(view, propName, value);
    }
  }
}
",
}
`;
